Overflow problem solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,10 +22,6 @@
 
 }
 
-html {
-  overflow-x: hidden
-}
-
 body {
   @apply bg-[#F9F5F2] text-[gray-700] transition-colors duration-300;
   font-family: var(--font-main), sans-serif;
